--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Compiler files
 cache/
 out/
+bin/
 
 # Ignores development broadcast logs
+broadcast
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
