--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,9 @@ out = 'out'
 libs = ['lib']
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[rpc_endpoints]
+testnetBSC = "${TBSC_RPC_URL}"
+
+[etherscan]
+testnetBSC = { key = "${BSCSCAN_API_KEY}" }
